# Odysseus-Extension

./: README.md
ingestion/: .gitignore  ingestion.toml.example  pyproject.toml
ingestion/eval/: gold.example.jsonl
ingestion/src/ingestion/: __init__.py  cli.py  config.py  eval.py  extractor.py  llm_extractor.py  orchestrator.py  rag_client.py  review.py  staging.py  textpipe.py  triples.py  walker.py
ingestion/tests/: test_cli_eval.py  test_config.py  test_eval.py  test_extractor.py  test_llm_extractor.py  test_orchestrator.py  test_rag_client.py  test_review.py  test_smoke.py  test_staging.py  test_textpipe.py  test_triples.py  test_walker.py
ops/: backup.sh  instance-config.md
